2001-12-29  Richard Henderson  <rth@redhat.com>

	* config/os/hpux/bits/os_defines.h: Don't define __glibcpp_long_bits.
	* config/os/hpux/bits/cpu_limits.h: New file.
	* configure.target (CPULIMITSH): Use it.

2001-12-28  Richard Henderson  <rth@redhat.com>

	* config/cpu/ia64/bits/cpu_limits.h: New file.
	* config/os/osf/osf5.0/bits/cpu_limits.h: New file.
	* configure.target (CPULIMITSH): Use them.

2001-12-28  Phil Edwards  <pme@gcc.gnu.org>

	* include/bits/c++config:  Move doxygen hook comment...
	* docs/doxygen/doxygroups.cc:  ...to here.

2001-12-28  Phil Edwards  <pme@gcc.gnu.org>

	PR libstdc++/2054
	* include/bits/stl_algo.h (lower_bound):  Relax concept checks.
	* testsuite/ext/concept_checks.cc:  New file.

2001-12-28  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/stl_algo.h (count returning void,
	count_if returning void, __random_sample, random_sample,
	random_sample_n, __is_heap, is_heap, is_sorted):  Move to...
	* include/ext/algorithm:  ...here, new file.
	* include/Makefile.am (ext_headers):  Add new file.
	* include/Makefile.in:  Regenerate.
	* testsuite/ext/headers.cc:  Include <ext/algorithm>.

2001-12-28  Paolo Carlini  <pcarlini@unitus.it>
	    Nathan Myers  <ncm@cantrip.org>

	* include/bits/basic_string.h (insert(__pos, __s, __n)):
	Optimize by avoiding temporaries and working in-place when possible.
	(insert(__pos1, __str)): Call insert(__pos1, __str, __pos2, __n).
	(insert(__pos1, __str, __pos2, __n)): Call insert(__pos, __s, __n).
	* testsuite/21_strings/insert.cc (test02): New testcases.

2001-12-27  Phil Edwards  <pme@gcc.gnu.org>

	* testsuite/testsuite_hooks.h (gnu_counting_struct):  Add.
	* testsuite/23_containers/deque_ctor.cc:  New file.

2001-12-27  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/locale_facets.tcc (collate::do_transform):
	Adjust implicit typename.
	* config/locale/messages_members_generic.h (messages::open,
	messages::do_open, messages::do_get): Adjust implicit typename.